Fixing window overflow

--- a/src/components/Desktop/Desktop.css
+++ b/src/components/Desktop/Desktop.css
@@ -96,7 +96,7 @@ html, body, #root {
 .window {
     position: absolute;
     overflow: hidden;
-    max-width: 87vw;
+    max-width: 90vw;
     max-height: 90vh;
     z-index: 10;
 }
