--- a/src/components/Portfolio/Blender.css
+++ b/src/components/Portfolio/Blender.css
@@ -9,11 +9,10 @@
 
 .Blender-content {
     margin-left: 160px;
-    width: calc(73% - 24px);
     font-style: bold;
     overflow: hidden; /* Ensures content is scrollable if it overflows */
     background-color: white;
-    width: 75vw;
+    width: 79vw;
     height: 85vh;
     word-wrap: break-word;
     overflow-x: hidden;
