--- a/src/components/Portfolio/Experience.css
+++ b/src/components/Portfolio/Experience.css
@@ -6,19 +6,17 @@
     font-family: Millenium;
     src: url(../../Fonts/Millennium.ttf);
 }
-.Experience-Content{
-    font-family: Magicalnight;
+.Page-Content{
     margin-left: 161px;
+    width: calc(73% - 24px);
     font-style: bold;
     overflow: hidden;
     background-color: white;
-    width: 75vw;
     height: 85vh;
     word-wrap: break-word;
     overflow-x: hidden;
     overflow-y: auto;
 }
-
 .ExperienceHeader{
     font-family: MidnightBlack;
     color: black;
